WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198072
[macOS] Compatibility mouse events aren't prevented by calling preventDefault() on pointerdown
https://bugs.webkit.org/show_bug.cgi?id=198072
Summary
[macOS] Compatibility mouse events aren't prevented by calling preventDefault...
Antoine Quint
Reported
2019-05-21 07:07:07 PDT
[macOS] Compatibility mouse events aren't prevented by calling preventDefault() on pointerdown
Attachments
Patch
(8.14 KB, patch)
2019-05-21 07:09 PDT
,
Antoine Quint
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2019-05-21 07:09:55 PDT
Created
attachment 370316
[details]
Patch
Antoine Quint
Comment 2
2019-05-21 07:10:00 PDT
<
rdar://problem/50983361
>
Antoine Quint
Comment 3
2019-05-21 10:50:46 PDT
Committed
r245585
: <
https://trac.webkit.org/changeset/245585
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug