[macOS] Compatibility mouse events aren't prevented by calling preventDefault() on pointerdown https://bugs.webkit.org/show_bug.cgi?id=198072 <rdar://problem/50983361>

Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

Mark the WPT test progression after fixing this bug.

* web-platform-tests/pointerevents/pointerevent_suppress_compat_events_on_click-expected.txt:

Source/WebCore:

The Pointer Events spec says that "compatibility" mouse events, which means all mouse events save for "click",
should not be dispatched for a given pointer if preventDefault() was called during the dispatch of the "pointerdown"
event. Additionally, calling preventDefault() during the dispatch of "pointerup" has no effect.

* dom/Element.cpp:
(WebCore::Element::dispatchMouseEvent):
* page/PointerCaptureController.cpp:
(WebCore::PointerCaptureController::preventsCompatibilityMouseEventsForIdentifier):
(WebCore::PointerCaptureController::pointerEventWasDispatched):
* page/PointerCaptureController.h:

Canonical link: https://commits.webkit.org/212164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245585 268f45cc-cd09-0410-ab3c-d52691b4dbfc